# ospsd-team-07

./: .coveragerc  .gitignore  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
components/issue_tracker_client_api/: README.md  pyproject.toml
components/issue_tracker_client_api/src/issue_tracker_client_api/: __init__.py  board.py  client.py  issue.py  list.py  member.py
components/issue_tracker_client_api/tests/: board_tests.py  client_tests.py  conftest.py  issue_tests.py  list_tests.py  member_tests.py
components/issue_tracker_client_impl/: README.md  pyproject.toml
components/issue_tracker_client_impl/src/issue_tracker_client_impl/: __init__.py
components/trello_client_impl/: README.md  pyproject.toml
components/trello_client_impl/src/trello_client_impl/: __init__.py  board.py  client.py  issue.py  list.py  member.py  trello_impl.py
components/trello_client_impl/tests/: client_test.py  conftest.py  list_test.py  trello_impl_test.py
docs/: TESTING.md  TEST_FILES_REFERENCE.md  architecture.md  architecture.puml  code-quality.md  index.md
docs/api/: issue_tracker_client_api.md  trello_client_impl.md
docs/testing/: TESTING.md  TEST_FILES_REFERENCE.md
tests/e2e/: conftest.py  e2e_tests.py
tests/integration/: conftest.py  integration_tests.py
tests/readME/: SETUP_SUMMARY.md  TESTING.md
