[project]
name = "issue-tracker-client-api"
version = "0.1.0"
description = "Abstract interface for the Issue Tracker client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_tracker_client_api"]
