[project]
name = "issue-tracker-client-impl"
version = "0.1.0"
description = "Concrete implementation of the Issue Tracker client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "issue-tracker-client-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/issue_tracker_client_impl"]

[tool.uv.sources]
issue-tracker-client-api = { workspace = true }
